# remopy

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/remopy/: Client.py  Server.py  __init__.py  cli.py  client.py  server.py
tests/: __init__.py  test_remopy.py
