[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remopy"
version = "0.1.0"
description = "Python package for remotely executing python functions during runtime"
readme = "README.rst"
authors = [
  {name = "Suraj Goel", email = "goel.suraj5@gmail.com"}
]
maintainers = [
  {name = "Suraj Goel", email = "goel.suraj5@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "dill","pyzmq"
]

[project.scripts]
remopy_server = "remopy.cli:main"

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/master/changelog.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

